--- a/package.json
+++ b/package.json
@@ -51,8 +51,12 @@
     "test": "grunt test"
   },
   "cordovaPlugins": [
-		"org.apache.cordova.device",
-		"org.apache.cordova.console",
-		"com.ionic.keyboard"
+    "org.apache.cordova.device",
+    "org.apache.cordova.console",
+    "com.ionic.keyboard"
+  ],
+  "cordovaPlatforms": [
+    "ios",
+    "android"
   ]
 }
