--- a/.jshintrc
+++ b/.jshintrc
@@ -57,6 +57,9 @@
     "globals": {
         "angular": false,
         "$": false,
-        "_": false
+        "_": false,
+        "cordova": false,
+        "StatusBar": false
+
     }
 }
