--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "Datenight",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {},
   "devDependencies": {
     "cordova": "~4.2.0",
     "elementtree": "0.1.6",
@@ -22,6 +21,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-gh-pages": "^0.10.0",
     "grunt-karma": "~0.10.1",
+    "grunt-manifest": "gunta/grunt-manifest",
     "grunt-newer": "~1.1.0",
     "grunt-ng-annotate": "~0.9.2",
     "grunt-ng-constant": "^1.0.0",
